# MVCAP2P

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  docker-compose.yml  opencode.example.json  opencode.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: test_round.md
.github/workflows/: ci.yml  deploy-devices.yml  release-testround.yml  test-round.yml
.opencode/: workflow.md
.opencode/agents/: android.md  doc.md  network.md  ui.md
.opencode/commands/: build-all.md  build-apk.md  build.md  docs.md  run.md  signaling.md  version.md
app/: Cargo.toml
app/android/: gradlew  local.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/src/: device.rs  lib.rs  lobby.rs  main.rs  net.rs  protocol.rs  room_discovery.rs  svg_assets.rs  transcode.rs  ui_layer.rs
app/src/game/: camera.rs  debug_hud.rs  graphics.rs  grid.rs  hud.rs  inspector.rs  lowpoly.rs  map.rs  mod.rs  ruler.rs  sync.rs  terrain.rs  tokens.rs  toolbar.rs  virtual_joystick.rs
docgen/: Cargo.toml
docgen/src/: extract.rs  generate.rs  main.rs
docs/: package-lock.json  package.json  prompt-programador.md  source.config.ts
docs/_data/: _global.json
docs/_data/signaling/: deps.json  index.json
docs/_data/signaling/modules/: main.json
docs/_data/tabletop/: deps.json  index.json
docs/_data/tabletop/modules/: game__camera.json  game__graphics.json  game__grid.json  game__hud.json  game__lowpoly.json  game__map.json  game__mod.json  game__sync.json  game__terrain.json  game__tokens.json  lib.json  lobby.json  main.json  net.json  protocol.json  room_discovery.json  svg_assets.json
docs/app/: layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: mdx.tsx
docs/content/docs/: _meta.json  index.mdx
docs/content/docs/adr/: 003-build-script.md  004-docs-workflow.md  005-docgen.md  006-type-driven-design.md  007-device-deploy-ci.md  008-graphics-settings.md  009-interface2-hybrid-movement.md  010-fixed-point-determinism.md  011-roadmap-revision.md  012-ui-mobile-first.md  013-system-ordering-b0002-fix.md
docs/content/docs/deploy/: index.md
docs/content/docs/signaling/: index.md  index.mdx
docs/content/docs/signaling/modules/: _meta.json  main.mdx
docs/content/docs/spec/: index.md
docs/content/docs/tabletop/: index.md  index.mdx
docs/content/docs/tabletop/modules/: _meta.json  game__camera.md  game__camera.mdx  game__graphics.md  game__grid.md  game__grid.mdx  game__hud.md  game__hud.mdx  game__lowpoly.md  game__lowpoly.mdx  game__map.md  game__map.mdx  game__mod.md  game__mod.mdx  game__sync.md  game__sync.mdx  game__terrain.md  game__terrain.mdx  game__tokens.md  game__tokens.mdx  lib.md  lib.mdx  lobby.md  lobby.mdx  main.md  net.md  net.mdx  protocol.md  protocol.mdx  room_discovery.md  room_discovery.mdx  svg_assets.md  svg_assets.mdx
docs/content/docs/workflow/: testing-loop.md
docs/lib/: shared.ts
scripts/: README.md  android-driver.sh  android-env.sh  android-port-status.json  bot-next.sh  build.sh  deploy-farm.sh  install-host.sh  seed-github-issues.sh  setup-pi.sh
shared/: Cargo.toml
shared/src/: lib.rs
signaling/: Cargo.toml
signaling/src/: main.rs
