[package]
name = "tabletop"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
bevy_matchbox = "0.12"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
resvg = { version = "0.47", default-features = false }
rand = "0.8"
