[package]
name = "tabletop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tabletop"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "android-native-activity", "android_shared_stdcxx",
    "animation", "async_executor",
    "bevy_asset", "bevy_audio", "bevy_color",
    "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_gltf",
    "bevy_input_focus", "bevy_log",
    "bevy_mesh_picking_backend", "bevy_pbr", "bevy_picking",
    "bevy_render", "bevy_scene", "bevy_sprite",
    "bevy_sprite_picking_backend", "bevy_state", "bevy_text",
    "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "bevy_winit",
    "custom_cursor", "default_font", "hdr", "multi_threaded",
    "png", "smaa_luts", "std", "sysinfo_plugin",
    "tonemapping_luts", "vorbis", "webgl2", "x11",
] }
shared = { path = "../shared" }
bevy_matchbox = "0.12"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
resvg = { version = "0.47", default-features = false, optional = true }
ureq = { version = "3", features = ["json"] }
serde_json = "1"
rand = "0.8"

[features]
default = ["svg"]
svg = ["dep:resvg"]
android = []
